--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                 <!-- từng sản thẻ con sản phẩm phải ôm cả grid-2-4 vì có rộng cao -->
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -585,7 +585,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -635,7 +635,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -685,7 +685,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -735,7 +735,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -785,7 +785,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -835,7 +835,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -885,7 +885,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
@@ -935,7 +935,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/home-product-item.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/home-product-item.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
