--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 </div>
                                 <div class="col  l-2-4 c-6 m-4"><!-- colum 20% -->
                                     <a href="" class="home-product-iteam">
-                                        <div class="home-product-iteam__img " style="background-image: url(/img/produc-home2.jpg);"></div>
+                                        <div class="home-product-iteam__img " style="background-image: url(./img/produc-home2.jpg);"></div>
                                         <h4 class="home-product-iteam__name">Set combo ngoan ngoãn nhất Set combo ngoan ngoãn nhất <span>Việt Nam</span></h4>
                                         <div class="home-product-iteam__price">
                                             <div class="home-product-iteam__price-old">10.000đ</div>
